<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchAcivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTitle"
        android:layout_marginTop="@dimen/margin_search"
        android:ems="10"
        android:hint="@string/hint_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eAuthor"
        android:hint="@string/hint_author"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search"/>
    <EditText
        android:id="@+id/ePublisheer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_publisher"
        android:layout_marginTop="@dimen/margin_search"
        android:ems="10"/>
    <EditText
        android:id="@+id/eISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search"
        android:ems="10"
        android:hint="@string/hint_isbn"/>
    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/search_button"
        android:textColor="#FFFFFF"
        android:text="@string/search"
        android:textSize="@dimen/seach_button_text"
        android:layout_marginTop="@dimen/margin_search"/>

</LinearLayout>